# tietoa-laari

./: README.md
backend/: .gitignore  pyproject.toml  railway.json
backend/backend/: config.py  database.py  grist.py  main.py  models.py  security.py  slack.py  slite.py
backend/tests/: test_database.py  test_main.py
frontend/: index.html  knip.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  config.ts  main.tsx
frontend/src/api/: Tasks.action.ts  Tasks.loader.ts  apply_filter.ts  convertEmoji.ts  formatRawMarkdown.ts  getChannels.ts  getComments.ts  getTask.ts  getTasks.ts  getToken.ts  getUsers.ts  patchTasks.ts  restore_luxon_objects.ts
frontend/src/assets/: ClosedIcon.tsx  DoneIcon.tsx  InProgressIcon copy 3.tsx  InProgressIcon.tsx  SlackIcon.tsx  TietoaIcon.tsx  TodoIcon.tsx
frontend/src/components/: Changelog.tsx  ChannelSelect.tsx  ChannelsMultiSelect.tsx  CommentThreadSpoiler.tsx  DateFilterDialog.tsx  DateWidget.tsx  DisplayTaskWidget.tsx  DrawerSettings.tsx  EditTaskWidget.tsx  ErrorPage.tsx  FilterDrawer.tsx  FormattedText.tsx  Header.tsx  Infopill.tsx  LightDarkModeButton.tsx  MarkdownFormattedText.tsx  MarkdownStrippedText.tsx  Secure.tsx  SignIn.tsx  SlackSignIn.tsx  SortOptionsMultiSelect.tsx  StatusDropdown.tsx  StatusIcon.tsx  StatusSelect.tsx  StatusWidget.tsx  SubteamTag.tsx  TaskAccordionItem.tsx  TaskAccordionPanel.tsx  TaskWidget.tsx  Tasklist.tsx  TasklistItem.tsx  TasklistItems.tsx  TeamTag.tsx  Tooltip.tsx  UserWidget.tsx  UsersMultiSelect.tsx  VotesWidget.tsx
frontend/src/hooks/: useAuth.ts  useAuthenticatedID.ts  useChannels.ts  useComments.ts  useExtendedComments.ts  useFilteredData.test.ts  useFilteredData.ts  useFilteredData.tsx  useFilters.ts  useLastVisit.ts  useMappedQueries.ts  useQueries.ts  useQueries.tsx  useRequest.ts  useSingleTaskQuery.ts  useSorted.ts  useTask.ts  useTasks.ts  useUsers.ts
frontend/src/routes/: App.tsx  Auth.tsx  Layout.tsx  Login.tsx  SectionLayout.tsx  SingleTask.tsx  TaskAccordion.tsx  TasklistLayout.tsx  Tasks.tsx
frontend/src/styles/: DisplayTaskWidget.module.css  FieldFilterInput.module.css  TaskAccordionItem.module.css  icon.css  index.css  task.css
(+30 files in other folders)
