[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ville <ville.reima@tietoa.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
slack-sdk = "^3.27.1"
httpx = "^0.27.0"
arrow = "^1.3.0"
motor = "^3.4.0"
multimethod = "^1.11.2"
orjson = "^3.10.1"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.2"
jupyterlab = "^4.1.6"
pyright = "^1.1.360"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
select = [
    "A",
    "B",
    "E",
    "F",
    "ISC",
    "UP",
    "RUF",
    "SIM",
    "ARG",
    "PD",
    "PLE",
    "PLR",
    "PLW"
]
ignore = [
    "E712",
    "E501"
]