[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ville <ville.reima@tietoa.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
slack-sdk = "^3.27.1"
httpx = "^0.27.0"
arrow = "^1.3.0"
multimethod = "^1.11.2"
orjson = "^3.10.1"
pytz = "^2024.1"
aiohttp = "^3.9.5"
async-cache = "^1.1.1"
emoji = "^2.12.1"
emoji-data-python = "^1.5.0"
motor = "^3.6.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.6.8"
jupyterlab = "^4.1.6"
pyright = "^1.1.360"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
lint.select = [
    "A",
    "B",
    "E",
    "F",
    "ISC",
    "UP",
    "RUF",
    "SIM",
    "ARG",
    "PD",
    "PLE",
    "PLR",
    "PLW",
]
lint.ignore = ["E712", "E501"]

[tool.pytest.ini_options]
filterwarnings = [
    # This's triggered by pytest-asyncio,
    # which calls deprecated asyncio.get_event_loop() method
    # ref: https://github.com/pytest-dev/pytest-asyncio/issues/757
    "ignore:There is no current event loop",
]
